# brett

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  setup.cfg
src/: manage.py
src/brett/: settings.py  urls.py  wsgi.py
src/brett/core/: admin.py  apps.py  email_parser.py  views.py
src/brett/core/management/commands/: review_emails.py  setup_defaults.py
src/brett/core/migrations/: 0001_initial.py  0002_entry_raw_message.py  0003_board_core_team.py
src/brett/core/models/: __init__.py  base.py  board.py  card.py  column.py  correspondent.py  entry.py  tag.py
src/brett/core/static/css/: main.css
src/brett/core/static/js/: board-detail.js  card-detail.js
src/brett/core/templatetags/: brett_list.py
src/templates/: base.html
src/templates/core/: _board_nav.html  add_card_form.html  add_card_success.html  board_detail.html  board_list.html  board_stats_partial.html  card_description_display.html  card_description_edit.html  card_detail.html  card_detail_partial.html  card_item.html  card_list.html  card_title_display.html  card_title_edit.html  confirm_import.html  confirm_import_new.html  entry_list.html  entry_summary_display.html  entry_summary_edit.html  import_email.html  new_card_button.html  search_cards_results.html  suggest_cards.html
src/tests/: conftest.py  test_admin.py  test_email_parser.py  test_management_commands.py  test_models.py  test_review_emails.py  test_views.py
