[project]
name = "brett"
version = "0.0.0"
description = "Kanban board project that understands email threads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "whitenoise>=6.6",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=4.1",
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "migrations"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["brett"]
skip = ["migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "brett.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["src/tests"]
addopts = "--reuse-db"
